# erebus

./: Cargo.toml
erebus_parser/: Cargo.toml
erebus_parser/src/: ast.rs  bin_ops.rs  expr.rs  lib.rs  parsable.rs  statement.rs  syntax_elements.rs  type.rs
erebus_parser/src/literals/: number.rs  string.rs
src/: args.rs  main.rs
src/parser/: bin_ops.rs  expr.rs  ident.rs  mod.rs  parsable.rs  statement.rs  syntax_elements.rs  type.rs
src/parser/literals/: mod.rs  number.rs  string.rs
